# VibeVoice-finetuning

./: LICENSE  README.md  diff_head_layers.txt  pyproject.toml  rollno.txt
src/: data_vibevoice.py  finetune_vibevoice_lora.py
src/vibevoice/modular/: modeling_vibevoice.py
src/vibevoice/processor/: preprocessor_config.json
